Fix container tests